change TargetNode.inputs type from Path to ForwardRelativePath
Summary:
Previous diffs guarantee that inputs are:

* always relative
* always normalized
* cannot point to above repo root

This diff enforces it using type system and make it more clear what this field may actually contain.

Reviewed By: bobyangyf

shipit-source-id: ddcfbc0bba1eb89e1dd12dadfa964aaa641559f6